objects/clm__MobileRelatedListFilters__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>CT CLM: Objects related query filters</description>
    <fields>
        <fullName>clm__GroupFieldAPIName__c</fullName>
        <description>Specify the api name of the field by which the entries will be grouped in the lists</description>
        <label>Group Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>clm__IsQuickSyncEnabled__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Quick Record Sync</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>clm__Order__c</fullName>
        <label>Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>clm__ParentObject__c</fullName>
        <label>Parent Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>clm__Profile__c</fullName>
        <label>Profile</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>clm__RecordType__c</fullName>
        <label>RecordType</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>clm__RelationshipName__c</fullName>
        <label>Relationship Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>clm__SOQL__c</fullName>
        <label>SOQL Filter</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>clm__SortOrder__c</fullName>
        <label>Sort Order</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>clm__SortTreeByFieldName__c</fullName>
        <label>Sort Tree by Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>clm__SyncRecovery__c</fullName>
        <description>Helps to push failed records to Salesforce via separate webservice with system privileges. Two option: Direct access —  directly store records in same object. Proxy Object —  store records details as json on Sync Log оbject for custom processing in future.</description>
        <inlineHelpText>Helps to push failed records to Salesforce via webservice with system privileges. Two option: Direct access —  directly store records in same object. Proxy Object —  store records details as json on Sync Log оbject for custom processing in future.</inlineHelpText>
        <label>Sync Recovery</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>clm__isApplicationLaunchEnabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show Application Launcher</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>clm__isConflictManagerEnabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Conflict Manager</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>clm__isCreateAllowed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Create Allowed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>clm__isDeleteAllowed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Delete Allowed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>clm__isOnlineFetchingEnabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Online Fetching</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>clm__isRelatedListFilter__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Related List Filter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>clm__sObjectRelated__c</fullName>
        <label>Related Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Related List Filters</label>
    <listViews>
        <fullName>BE</fullName>
        <columns>NAME</columns>
        <columns>clm__sObjectRelated__c</columns>
        <columns>clm__ParentObject__c</columns>
        <columns>clm__isCreateAllowed__c</columns>
        <columns>clm__isDeleteAllowed__c</columns>
        <columns>clm__SOQL__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>clm__Profile__c</field>
            <operation>equals</operation>
            <value>00eD0000001Aw4sIAC</value>
        </filters>
        <label>BE Standard</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>BE_OFF</fullName>
        <columns>NAME</columns>
        <columns>clm__sObjectRelated__c</columns>
        <columns>clm__ParentObject__c</columns>
        <columns>clm__SOQL__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>clm__Profile__c</field>
            <operation>equals</operation>
            <value>00eD0000001Aw4qIAC</value>
        </filters>
        <label>BE OFF</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>BE_ON</fullName>
        <columns>NAME</columns>
        <columns>clm__sObjectRelated__c</columns>
        <columns>clm__ParentObject__c</columns>
        <columns>clm__isCreateAllowed__c</columns>
        <columns>clm__isDeleteAllowed__c</columns>
        <columns>clm__SOQL__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>clm__Profile__c</field>
            <operation>equals</operation>
            <value>00eD0000001Aw4rIAC</value>
        </filters>
        <label>BE ON</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>DE_On_Trade</fullName>
        <columns>NAME</columns>
        <columns>clm__ParentObject__c</columns>
        <columns>clm__sObjectRelated__c</columns>
        <columns>clm__isCreateAllowed__c</columns>
        <columns>clm__isDeleteAllowed__c</columns>
        <columns>clm__SOQL__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>clm__Profile__c</field>
            <operation>equals</operation>
            <value>00eD0000001AtYeIAK</value>
        </filters>
        <label>EUR DE On Trade</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>DK_Off_Trade</fullName>
        <columns>NAME</columns>
        <columns>clm__ParentObject__c</columns>
        <columns>clm__sObjectRelated__c</columns>
        <columns>clm__isCreateAllowed__c</columns>
        <columns>clm__isDeleteAllowed__c</columns>
        <columns>clm__SOQL__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>clm__Profile__c</field>
            <operation>equals</operation>
            <value>00eD0000001AvKJIA0</value>
        </filters>
        <label>DK Off Trade</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>EUR_CH_On_Trade</fullName>
        <columns>NAME</columns>
        <columns>clm__ParentObject__c</columns>
        <columns>clm__sObjectRelated__c</columns>
        <columns>clm__SOQL__c</columns>
        <columns>clm__isCreateAllowed__c</columns>
        <columns>clm__isDeleteAllowed__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>clm__Profile__c</field>
            <operation>equals</operation>
            <value>00e1i000000h0XDAAY</value>
        </filters>
        <label>EUR CH On Trade</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>EUR_DB_Off_Trade_User</fullName>
        <columns>NAME</columns>
        <columns>clm__ParentObject__c</columns>
        <columns>clm__sObjectRelated__c</columns>
        <columns>clm__SOQL__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>clm__Profile__c</field>
            <operation>equals</operation>
            <value>00e1i000000YLOwAAO</value>
        </filters>
        <label>EUR DB Off Trade User</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>EUR_DB_On_Trade_User</fullName>
        <columns>NAME</columns>
        <columns>clm__ParentObject__c</columns>
        <columns>clm__sObjectRelated__c</columns>
        <columns>clm__SOQL__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>clm__Profile__c</field>
            <operation>equals</operation>
            <value>00e1i000000YLOxAAO</value>
        </filters>
        <label>EUR DB On Trade User</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>EUR_DB_Standard_User</fullName>
        <columns>NAME</columns>
        <columns>clm__ParentObject__c</columns>
        <columns>clm__sObjectRelated__c</columns>
        <columns>clm__SOQL__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>clm__Profile__c</field>
            <operation>equals</operation>
            <value>00e1i000000YLOyAAO</value>
        </filters>
        <label>EUR DB Standard User</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>EUR_GB_Platform_User</fullName>
        <columns>NAME</columns>
        <columns>clm__ParentObject__c</columns>
        <columns>clm__sObjectRelated__c</columns>
        <columns>clm__isCreateAllowed__c</columns>
        <columns>clm__isDeleteAllowed__c</columns>
        <columns>clm__isRelatedListFilter__c</columns>
        <columns>clm__SOQL__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>clm__Profile__c</field>
            <operation>equals</operation>
            <value>00eD0000001AsghIAC</value>
        </filters>
        <label>EUR GB Platform User</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>EUR_IDL_On_Trade_User</fullName>
        <columns>NAME</columns>
        <columns>clm__ParentObject__c</columns>
        <columns>clm__sObjectRelated__c</columns>
        <columns>clm__SOQL__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>clm__Profile__c</field>
            <operation>equals</operation>
            <value>00e1i000000YLP1AAO</value>
        </filters>
        <label>EUR IDL On Trade User</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>EUR_IDL_Standard_User</fullName>
        <columns>NAME</columns>
        <columns>clm__ParentObject__c</columns>
        <columns>clm__sObjectRelated__c</columns>
        <columns>clm__SOQL__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>clm__Profile__c</field>
            <operation>equals</operation>
            <value>00e1i000000YLP2AAO</value>
        </filters>
        <label>EUR IDL Standard User</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>EUR_MA_Off_Trade_User</fullName>
        <columns>NAME</columns>
        <columns>clm__ParentObject__c</columns>
        <columns>clm__sObjectRelated__c</columns>
        <columns>clm__SOQL__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>clm__Profile__c</field>
            <operation>equals</operation>
            <value>00eD0000001Qt2zIAC</value>
        </filters>
        <label>EUR MA Off Trade User</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>EUR_MA_On_Trade_User</fullName>
        <columns>NAME</columns>
        <columns>clm__ParentObject__c</columns>
        <columns>clm__sObjectRelated__c</columns>
        <columns>clm__SOQL__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>clm__Profile__c</field>
            <operation>equals</operation>
            <value>00eD0000001Qt30IAC</value>
        </filters>
        <label>EUR MA On Trade User</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>EUR_ZA_ST</fullName>
        <columns>NAME</columns>
        <columns>clm__ParentObject__c</columns>
        <columns>clm__sObjectRelated__c</columns>
        <columns>clm__isCreateAllowed__c</columns>
        <columns>clm__isDeleteAllowed__c</columns>
        <columns>clm__isRelatedListFilter__c</columns>
        <columns>clm__SOQL__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>clm__Profile__c</field>
            <operation>equals</operation>
            <value>00eD0000001PqHZIA0</value>
        </filters>
        <label>EUR ZA ST</label>
        <language>en_US</language>
    </listViews>
</CustomObject>